--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,7 @@ ruff = "^0.1.8"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+tests = 'scripts:tests'
+main = 'scripts:main'
